{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1911,
  "lineage": "da0f8888-3eaa-15be-074a-bb6c536436c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bos_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f4e6dabb26053f",
            "arn": "arn:aws:ec2:us-east-1:891377135193:elastic-ip/eipalloc-0c8f4e6dabb26053f",
            "domain": "vpc",
            "id": "eipalloc-0c8f4e6dabb26053f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-163-144.compute-1.amazonaws.com",
            "public_ip": "3.209.163.144",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-nat-eip01"
            },
            "tags_all": {
              "Name": "bos-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:891377135193:instance/i-069c23a7d5efd7311",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-069c23a7d5efd7311",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b3bf2841cfcc0d8"
              }
            ],
            "primary_network_interface_id": "eni-02b3bf2841cfcc0d8",
            "private_dns": "ip-10-26-101-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.101.58",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bdd9a3832730254a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07901d946eab4d79a",
            "tags": {
              "Name": "bos-ec201-private"
            },
            "tags_all": {
              "Name": "bos-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4d91e6e6397ead7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-069c23a7d5efd7311",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bos_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:internet-gateway/igw-0b485668722cf428e",
            "id": "igw-0b485668722cf428e",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-igw01"
            },
            "tags_all": {
              "Name": "bos-igw01"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bos_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "bos-alb-logs-lh-891377135193",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/ea9dd99a1b4d5abb",
            "arn_suffix": "app/bos-alb01/ea9dd99a1b4d5abb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bos-alb01-1899301570.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/ea9dd99a1b4d5abb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bos-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-078f3f35405cd4efc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fb43fbe252b6bca"
              },
              {
                "subnet_id": "subnet-038971dbe35da27ef"
              }
            ],
            "subnets": [
              "subnet-02fb43fbe252b6bca",
              "subnet-038971dbe35da27ef"
            ],
            "tags": {
              "Name": "bos-alb01"
            },
            "tags_all": {
              "Name": "bos-alb01"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/ea9dd99a1b4d5abb"
          },
          "dependencies": [
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/06b59485c5a26803",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/06b59485c5a26803",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/ea9dd99a1b4d5abb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/06b59485c5a26803"
          },
          "dependencies": [
            "aws_lb.bos_alb01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1",
            "certificate_arn": "arn:aws:acm:us-east-1:891377135193:certificate/6c0c27bd-b38d-437e-b023-5f21606e11f7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/ea9dd99a1b4d5abb",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/0870468a40cf2109",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/0870468a40cf2109",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1",
            "priority": 99,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/0870468a40cf2109"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "bos_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/664a8eac900acdc7",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-BOS-Growl",
                    "regex_values": [],
                    "values": [
                      "y215eUrpXXq4coyWAnyY5vMKyQsJ33kP"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/664a8eac900acdc7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1",
            "priority": 10,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener-rule/app/bos-alb01/ea9dd99a1b4d5abb/d1189548edc57ac1/664a8eac900acdc7"
          },
          "dependencies": [
            "aws_acm_certificate.bos_acm_cert01",
            "aws_acm_certificate_validation.bos_acm_validation01",
            "aws_lb.bos_alb01",
            "aws_lb_listener.bos_https_listener01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.bos_acm_validation_records01",
            "aws_s3_bucket.bos_alb_logs_bucket01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01",
            "random_password.bos_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bos_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac",
            "arn_suffix": "targetgroup/bos-tg01/77f4e0ed393fbcac",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bos-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bos-tg01"
            },
            "tags_all": {
              "Name": "bos-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bos_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac-2026012314054739390000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/77f4e0ed393fbcac",
            "target_id": "i-069c23a7d5efd7311"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_instance.bos_ec201_private_bonus",
            "aws_lb_target_group.bos_tg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bos_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f4e6dabb26053f",
            "association_id": "eipassoc-09a11ff08db7db50f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09247d773d16531fd",
            "network_interface_id": "eni-0b2212814a1c4279b",
            "private_ip": "10.26.1.224",
            "public_ip": "3.209.163.144",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02fb43fbe252b6bca",
            "tags": {
              "Name": "bos-nat01"
            },
            "tags_all": {
              "Name": "bos-nat01"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01af8c7e0556f216f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09247d773d16531fd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01af8c7e0556f216f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01af8c7e0556f216f"
          },
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_nat_gateway.bos_nat01",
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b485668722cf428e",
            "id": "r-rtb-0409f4d57b756522b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0409f4d57b756522b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0409f4d57b756522b"
          },
          "dependencies": [
            "aws_internet_gateway.bos_igw01",
            "aws_route_table.bos_public_rt01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-01af8c7e0556f216f",
            "id": "rtb-01af8c7e0556f216f",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "bos-private-rt01"
            },
            "tags_all": {
              "Name": "bos-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-01af8c7e0556f216f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-0409f4d57b756522b",
            "id": "rtb-0409f4d57b756522b",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "bos-public-rt01"
            },
            "tags_all": {
              "Name": "bos-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0409f4d57b756522b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2e5e65e8e101629",
            "region": "us-east-1",
            "route_table_id": "rtb-01af8c7e0556f216f",
            "subnet_id": "subnet-07901d946eab4d79a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e083d39650ad8734",
            "region": "us-east-1",
            "route_table_id": "rtb-01af8c7e0556f216f",
            "subnet_id": "subnet-058786d6cf173ac55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025126f09c6f902f5",
            "region": "us-east-1",
            "route_table_id": "rtb-0409f4d57b756522b",
            "subnet_id": "subnet-02fb43fbe252b6bca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0effc6635d85981b0",
            "region": "us-east-1",
            "route_table_id": "rtb-0409f4d57b756522b",
            "subnet_id": "subnet-038971dbe35da27ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-078f3f35405cd4efc",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-078f3f35405cd4efc",
            "ingress": [],
            "name": "bos-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-alb-sg01"
            },
            "tags_all": {
              "Name": "bos-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-078f3f35405cd4efc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0e4d91e6e6397ead7",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-0e4d91e6e6397ead7",
            "ingress": [],
            "name": "bos-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-ec2-sg01"
            },
            "tags_all": {
              "Name": "bos-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0e4d91e6e6397ead7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0529e323ebe7aa9bc",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-0529e323ebe7aa9bc",
            "ingress": [],
            "name": "bos-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-rds-sg01"
            },
            "tags_all": {
              "Name": "bos-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0529e323ebe7aa9bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0322ced07486c7188",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0322ced07486c7188",
            "ingress": [],
            "name": "bos-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-vpce-sg01"
            },
            "tags_all": {
              "Name": "bos-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0322ced07486c7188",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-07901d946eab4d79a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07901d946eab4d79a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet01"
            },
            "tags_all": {
              "Name": "bos-private-subnet01"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-07901d946eab4d79a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-058786d6cf173ac55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058786d6cf173ac55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet02"
            },
            "tags_all": {
              "Name": "bos-private-subnet02"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-058786d6cf173ac55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-02fb43fbe252b6bca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fb43fbe252b6bca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet01"
            },
            "tags_all": {
              "Name": "bos-public-subnet01"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-02fb43fbe252b6bca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-038971dbe35da27ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038971dbe35da27ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet02"
            },
            "tags_all": {
              "Name": "bos-public-subnet02"
            },
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-038971dbe35da27ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bos_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc/vpc-042aa46ffa3d26a4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.0.0/16",
            "default_network_acl_id": "acl-08b5ac3c30c52048a",
            "default_route_table_id": "rtb-0a166acf7e9239653",
            "default_security_group_id": "sg-0f0e6e7326dde6370",
            "dhcp_options_id": "dopt-01a7c7fae7f55da14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042aa46ffa3d26a4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a166acf7e9239653",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-vpc01"
            },
            "tags_all": {
              "Name": "bos-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-042aa46ffa3d26a4c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0dcc5b2e6e304502f",
            "dns_entry": [
              {
                "dns_name": "vpce-0dcc5b2e6e304502f-v7amlm1j.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcc5b2e6e304502f-v7amlm1j-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0dcc5b2e6e304502f-v7amlm1j-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05381273RXRXQ2VIJXTG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dcc5b2e6e304502f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-065ce9d86508449cd",
              "eni-0ebd35083adb474a2"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.81",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.51",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0dcc5b2e6e304502f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0b82f3afa2d2b1883",
            "dns_entry": [
              {
                "dns_name": "vpce-0b82f3afa2d2b1883-42u8eu1g.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b82f3afa2d2b1883-42u8eu1g-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b82f3afa2d2b1883-42u8eu1g-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05263492M9F50Y6MX2X1"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z0526344FUSI77ZZ7R93"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b82f3afa2d2b1883",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03d90be7347979770",
              "eni-0fba19608a5171b52"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.42",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.55",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-kms01"
            },
            "tags_all": {
              "Name": "bos-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0b82f3afa2d2b1883",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-02915b1b55e3fbb7b",
            "dns_entry": [
              {
                "dns_name": "vpce-02915b1b55e3fbb7b-id48tm2g.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02915b1b55e3fbb7b-id48tm2g-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-02915b1b55e3fbb7b-id48tm2g-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01424543A5BYJAAST4V9"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01195683TAKW68H523TV"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z011957536Q8XFBPVWGCL"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z01189593VCFUXE7BZJAU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02915b1b55e3fbb7b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05966d396c7e564cf",
              "eni-0dfd9a7b9abfdfab7"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.217",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.137",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-logs01"
            },
            "tags_all": {
              "Name": "bos-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-02915b1b55e3fbb7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-06418db1807f1898c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06418db1807f1898c",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01af8c7e0556f216f"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "bos-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "bos-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-06418db1807f1898c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-05d97a13dbdbecf3a",
            "dns_entry": [
              {
                "dns_name": "vpce-05d97a13dbdbecf3a-9kws1pqc.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05d97a13dbdbecf3a-9kws1pqc-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05d97a13dbdbecf3a-9kws1pqc-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05384893MH7J5QKKOLNF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05d97a13dbdbecf3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-091d146831e3c0a71",
              "eni-093a201833ce607f7"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.197",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.219",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-secrets01"
            },
            "tags_all": {
              "Name": "bos-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05d97a13dbdbecf3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-08eb6c1d7dc22956d",
            "dns_entry": [
              {
                "dns_name": "vpce-08eb6c1d7dc22956d-wqwvf6iv.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb6c1d7dc22956d-wqwvf6iv-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb6c1d7dc22956d-wqwvf6iv-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0157139F19TBFNHQ702"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z012136413PK08Q0TI5TJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08eb6c1d7dc22956d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04298a589acecd2c5",
              "eni-0b0597e7fedf148d2"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.18",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.130",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-ssm01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-08eb6c1d7dc22956d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0e4cc529bba5d1ca4",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4cc529bba5d1ca4-l1u5rb9e.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4cc529bba5d1ca4-l1u5rb9e-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4cc529bba5d1ca4-l1u5rb9e-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05382821UH7SFEZVCVTT"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z02463273SA6TXZPX9M6L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4cc529bba5d1ca4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0535854209d3fdb5d",
              "eni-0ad1e17a4963345bd"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0322ced07486c7188"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.124",
                "subnet_id": "subnet-07901d946eab4d79a"
              },
              {
                "ipv4": "10.26.102.154",
                "subnet_id": "subnet-058786d6cf173ac55"
              }
            ],
            "subnet_ids": [
              "subnet-058786d6cf173ac55",
              "subnet-07901d946eab4d79a"
            ],
            "tags": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-042aa46ffa3d26a4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0e4cc529bba5d1ca4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-09d767eefc91b7711",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09d767eefc91b7711",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-078f3f35405cd4efc",
            "security_group_rule_id": "sgr-09d767eefc91b7711",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-09d767eefc91b7711",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-00f1f2eedd8ae8940",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00f1f2eedd8ae8940",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e4d91e6e6397ead7",
            "security_group_rule_id": "sgr-00f1f2eedd8ae8940",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-00f1f2eedd8ae8940",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0a2d91ebbef1c5890",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0a2d91ebbef1c5890",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0529e323ebe7aa9bc",
            "security_group_rule_id": "sgr-0a2d91ebbef1c5890",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0a2d91ebbef1c5890",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0e1484e380666dda6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0e1484e380666dda6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0322ced07486c7188",
            "security_group_rule_id": "sgr-0e1484e380666dda6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0e1484e380666dda6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0e2401fc539f3f204",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0e2401fc539f3f204",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-3b927c52",
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-078f3f35405cd4efc",
            "security_group_rule_id": "sgr-0e2401fc539f3f204",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0e2401fc539f3f204",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01",
            "data.aws_ec2_managed_prefix_list.bos_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-08effb5a3f0a65186",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08effb5a3f0a65186",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-078f3f35405cd4efc",
            "security_group_rule_id": "sgr-08effb5a3f0a65186",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-08effb5a3f0a65186",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0ee2fdd2cebe8a1d6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ee2fdd2cebe8a1d6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-078f3f35405cd4efc",
            "region": "us-east-1",
            "security_group_id": "sg-0e4d91e6e6397ead7",
            "security_group_rule_id": "sgr-0ee2fdd2cebe8a1d6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0ee2fdd2cebe8a1d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0ebd49c8d7f458715",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0ebd49c8d7f458715",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4d91e6e6397ead7",
            "region": "us-east-1",
            "security_group_id": "sg-0529e323ebe7aa9bc",
            "security_group_rule_id": "sgr-0ebd49c8d7f458715",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0ebd49c8d7f458715",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-06dad36b16e1c2873",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-06dad36b16e1c2873",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e4d91e6e6397ead7",
            "region": "us-east-1",
            "security_group_id": "sg-0322ced07486c7188",
            "security_group_rule_id": "sgr-06dad36b16e1c2873",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-06dad36b16e1c2873",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    }
  ]
}